# coldstream-proto

./: README.md
python/coldstream/: .gitignore  convert.py  data.py  docstore.py  ip_api.py  ip_base.py  ipctl.py  metastore.py  ocr.py  repo.cfg  requirements.txt  validate.py  weak.py
scripts/: curl_recognize.sh  populate-cache.sh
services/: pom.xml
services/goldfin-storage/: .swagger-codegen-ignore  Dockerfile  README.md  requirements.txt  setup.cfg
services/goldfin-storage/conf/: storage.yaml  storage.yaml.sample
services/goldfin-storage/daemon/: .swagger-codegen-ignore  README.md  daemon_tests.py  storage_daemon.py
services/goldfin-storage/daemon/goldfin_storage/: .encoder.py.swp  __main__.py  config.py  daemon.py  encoder.py  s3.py
services/goldfin-storage/daemon/goldfin_storage/controllers/: storage_controller.py
services/goldfin-storage/daemon/goldfin_storage/models/: __init__.py  api_response.py  document.py
services/goldfin-storage/daemon/goldfin_storage/swagger/: swagger.yaml
services/goldfin-storage/goldfin_storage/controllers/: storage_controller.py
services/goldfin-storage/goldfin_storage/models/: tenant_info.py
services/goldfin-storage/goldfin_storage/test/: test_storage_controller.py
services/goldfin-storage/scripts/: create_tenant.sh  create_tenant_doc.sh  delete_tenant.sh  get_content.sh  get_tenant.sh  json-test.sh
services/goldfin-storage/swagger/: goldfin-storage.yaml  storage-codegen.sh
swagger/: README.md  coldstream-proto.yaml  goldfin-public-api.yaml  goldfin-service-admin-api.yaml  python-codegen.sh  swagger.yaml
(+829 files in other folders)
