[metadata]
name = goldfin-storage
summary = Goldfin Storage Server
description-file =
	README.md
author = R Hodges
author_email = rhodges@goldfin.io
url = https://github.com/granadata/coldstream-proto
license = Proprietary
classifier =
	Environment :: Console
	Intended Audience :: System Administrators
	Intended Audience :: Developers
	Operating System :: POSIX :: Linux
	Programming Language :: Python :: 3
requires-python = >=3

[files]
packages =
	storage

[global]

[bdist_wheel]
universal = 1

[entry_points]
console_scripts =
	storage_daemon = storage.main:run

[easy_install]
